--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -3,17 +3,20 @@
 
 %\addPrintStyle{.}
 
+
+
 \pdfOnly{
     \renewcommand{\xmcursusnaam}{{\textsc{Natuurkunde}}}
 }
 
 \logo{xmPictures/nomlogo.png}
 
-%\handouttrue 
+\handouttrue 
+\nonewpagetrue
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Dynamica: De wetten van Newton}{}  
+    \xmtitle{Dynamica: Toepassingen van de wetten van Newton}{}  
  
 
 \setcounter{part}{3}
