--- a/dynamica/toep_intro.tex
+++ b/dynamica/toep_intro.tex
@@ -8,7 +8,7 @@
     \xmsource\xmuitleg
 
 
-
-	%%\newpage
+In dit hoofdstuk worden de wetten van Newton toegepast op verschillende krachten die je reeds kent. 
+Daarnaast worden de wetten ook gebruikt om de dynamica van enkele systemen (ECB, valversnelling, ...) te bestuderen.
 	
 \end{document}
