--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -40,17 +40,17 @@
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
 
-% \activitychapter{../dynamica/toep_krachten.tex}
-% \activitysection{../dynamica/toep_krachten_normaalkracht.tex}
-% \activitysection{../dynamica/toep_krachten_veerkracht.tex}
-% \activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
-% \activitysection{../dynamica/toep_krachten_gravitatie.tex}
-% \activitysection{../dynamica/toep_krachten_Coulomb.tex}
-% \activitysection{../dynamica/toep_krachten_Lorentz.tex}
-% \activitysection{../dynamica/toep_krachten_kernkrachten.tex}
-% \activitysection{../dynamica/toep_krachten_wrijving.tex}
-% \activitysection{../dynamica/toep_krachten_trekkracht.tex}
-% \activitysection{../dynamica/toep_krachten_gewicht.tex}
+\activitychapter{../dynamica/toep_krachten.tex}
+\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+\activitysection{../dynamica/toep_krachten_veerkracht.tex}
+\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+\activitysection{../dynamica/toep_krachten_gravitatie.tex}
+\activitysection{../dynamica/toep_krachten_Coulomb.tex}
+\activitysection{../dynamica/toep_krachten_Lorentz.tex}
+\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+\activitysection{../dynamica/toep_krachten_wrijving.tex}
+\activitysection{../dynamica/toep_krachten_trekkracht.tex}
+\activitysection{../dynamica/toep_krachten_gewicht.tex}
 
 \activitychapter{../dynamica/toep_valversnelling.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
