--- a/SPC/semester1_dev.tex
+++ b/SPC/semester1_dev.tex
@@ -67,7 +67,7 @@
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 
-\part{Toepassing wetten van Newton}
+\part{De wetten van Newton toegepast}
 
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
@@ -84,10 +84,14 @@
 \activitysection{../dynamica/toep_krachten_trekkracht.tex}
 \activitysection{../dynamica/toep_krachten_gewicht.tex}
 
-
 \activitychapter{../dynamica/toep_valversnelling.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
 \activitychapter{../dynamica/toep_satellietbanen.tex}
+
+\activitychapter{../dynamica/exercises/toep_oefeningen.tex}
+\activitysection{../dynamica/exercises/toep_vraagstukken.tex}
+\activitysection{../dynamica/exercises/toep_ECB.tex}
+
 
 
 \part{De gravitatiekracht}
