--- a/dynamica/toep_algemeen.tex
+++ b/dynamica/toep_algemeen.tex
@@ -99,6 +99,11 @@
     \begin{denkvraag*}{Extra moeilijke oefening}
 	Gegeven de opstelling zoals in de figuur. Gegeven is ook dat: $m_1 = \SI{3,0}{kg}$, $m_2 = \SI{7,0}{kg}$ en $\alpha = \ang{20}$. Bepaal de groottes van de versnelling van de blokken, de spankracht in het touw en de normaalkracht op blok 2. Verwaarloos alle wrijving en veronderstel het touw massaloos.
 	
+	\begin{image}[0.5\textwidth]
+		\includegraphics{massashelling}
+	\end{image}
+
+
     \begin{oplossing}
 	\textbf{Uitkomsten:}
     $(-) \SI{0,594}{m/s^2}$; \SI{27,6}{N}; \SI{64,5}{N}
