--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -45,13 +45,13 @@ Wanneer een massa $m$ een eenparige cirkelbeweging maakt, raakt de richtingsvera
 De looping \\
 Als je in een achtbaan een looping maakt, is de resultante van de zwaartekracht en de normaalkracht de middelpuntzoekende kracht. Merk op dat de zwaartekracht in elk punt van de looping hetzelfde is, maar dat de grootte, richting en/of zin van de normaalkracht verandert naargelang het punt van de looping. De resultante moet immers naar het middelpunt van de cirkelbaan wijzen. Indien de looping als een ECB verondersteld wordt, krijg je in het laagste en het onderste punt onderstaand krachtendiagram.\\
 
-\begin{image}[0.5\textwidth]
-	\includegraphics{3_looping1}
-\end{image}
+% \begin{image}[0.5\textwidth]
+% 	\includegraphics{3_looping1}
+% \end{image}
 
-\begin{image}[0.5\textwidth]
-	\includegraphics{4_looping2}
-\end{image}
+% \begin{image}[0.5\textwidth]
+% 	\includegraphics{4_looping2}
+% \end{image}
 
 
 
@@ -74,12 +74,12 @@ Kan je een echte looping als een ECB beschouwen? Zoja, verklaar. Zoniet, waar is
 
 In de carrousel zit je in een stoeltje verbonden aan één of meerdere touwen die door een extern mechanisme een draaibeweging maken. Hierdoor maak jij met het stoeltje een ECB in een horizontaal vlak. Jij en het stoeltje samen ondervinden twee krachten: de trekkracht van het touw en de zwaartekracht. De trekkracht kan ontbonden worden in een horizontale en een verticale component. De verticale component compenseert de zwaartekracht omdat je in verticale richting niet versnelt. In horizontale richting versnel je wel, naar het middelpunt van de cirkel. De middelpuntzoekende kracht is dus de horizontale component van de trekkracht.
 
-\begin{image}[0.5\textwidth]
-	\includegraphics{5_carrousel1}
-\end{image}
-\begin{image}[0.5\textwidth]
-	\includegraphics{6_carrousel2}
-\end{image}
+% \begin{image}[0.5\textwidth]
+% 	\includegraphics{5_carrousel1}
+% \end{image}
+% \begin{image}[0.5\textwidth]
+% 	\includegraphics{6_carrousel2}
+% \end{image}
 
 \end{example}
 
