--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -70,4 +70,30 @@
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
+
+\part{De wetten van Newton toegepast}
+
+\activitychapter{../dynamica/toep_intro.tex}
+\activitychapter{../dynamica/toep_algemeen.tex}
+
+\activitychapter{../dynamica/toep_krachten.tex}
+\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+\activitysection{../dynamica/toep_krachten_veerkracht.tex}
+\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+\activitysection{../dynamica/toep_krachten_gravitatie.tex}
+\activitysection{../dynamica/toep_krachten_Coulomb.tex}
+\activitysection{../dynamica/toep_krachten_Lorentz.tex}
+\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+\activitysection{../dynamica/toep_krachten_wrijving.tex}
+\activitysection{../dynamica/toep_krachten_trekkracht.tex}
+\activitysection{../dynamica/toep_krachten_gewicht.tex}
+
+\activitychapter{../dynamica/toep_valversnelling.tex}
+\activitychapter{../dynamica/toep_dynamica_ECB.tex}
+\activitychapter{../dynamica/toep_satellietbanen.tex}
+
+\activitychapter{../dynamica/exercises/toep_oefeningen.tex}
+\activitysection{../dynamica/exercises/toep_vraagstukken.tex}
+\activitysection{../dynamica/exercises/toep_ECB.tex}
+
 \end{document}
