trillingen in aparte paragraaf

--- a/SPC/ht.tex
+++ b/SPC/ht.tex
@@ -17,6 +17,7 @@
 \part{Harmonische trillingen}
 
 \activitychapter{../perverschijnselen/ht_intro.tex}
+\activitychapter{../perverschijnselen/ht_trillingen.tex}
 \activitychapter{../perverschijnselen/ht_massaveersysteem.tex}
 \activitychapter{../perverschijnselen/ht_relatie_cirkelbeweging.tex}
 \activitychapter{../perverschijnselen/ht_mathematische_slinger.tex}
