--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -96,4 +96,17 @@
 \activitysection{../dynamica/exercises/toep_vraagstukken.tex}
 \activitysection{../dynamica/exercises/toep_ECB.tex}
 
+
+\part{Harmonische trillingen}
+
+\activitychapter{../perverschijnselen/ht_intro.tex}
+\activitychapter{../perverschijnselen/ht_trillingen.tex}
+\activitychapter{../perverschijnselen/ht_massaveersysteem.tex}
+\activitychapter{../perverschijnselen/ht_harmonischetrilling.tex}
+\activitychapter{../perverschijnselen/ht_verloop.tex}
+\activitychapter{../perverschijnselen/ht_fasor.tex}
+\activitychapter{../perverschijnselen/ht_mathematische_slinger.tex}
+\activitychapter{../perverschijnselen/ht_energie.tex}
+\activitychapter{../perverschijnselen/resonantie.tex}
+
 \end{document}
