lege bestanden klaargezet

--- a/SPC/test_local.tex
+++ b/SPC/test_local.tex
@@ -2,21 +2,25 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Kinematica: eendimensionale bewegingen}{}  
+    \xmtitle{test local}{}  
  
-\setcounter{part}{2}
+\setcounter{part}{1}
     
-\part{Eendimensionale bewegingen}
+\part{Harmonische trillingen}
 
-\activitychapter{../kinematica/1dim_intro.tex}
-\activitychapter{../kinematica/1dim_ERB.tex}
-\activitychapter{../kinematica/1dim_EVRB_calculus.tex}
-\activitychapter{../kinematica/1dim_oplossingsstrategie.tex}
-\activitychapter{../kinematica/1dim_verticale_worp.tex}
-\activitychapter{../kinematica/exercises/1dim_oef.tex}
-\activitysection{../kinematica/exercises/1dim_oef_denkvragen.tex}
-\activitysection{../kinematica/exercises/1dim_oef_vraagstukken.tex}
-\activitysection{../kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex}
+\activitychapter{../perverschijnselen/ht_intro.tex}
+% \activitychapter{../perverschijnselen/ht_trillingen.tex}
+% \activitychapter{../perverschijnselen/ht_massaveersysteem.tex}
+% \activitychapter{../perverschijnselen/ht_harmonischetrilling.tex}
+% \activitychapter{../perverschijnselen/ht_verloop.tex}
+% \activitychapter{../perverschijnselen/ht_fasor.tex}
+% \activitychapter{../perverschijnselen/ht_mathematische_slinger.tex}
+% \activitychapter{../perverschijnselen/ht_energie.tex}
+% \activitychapter{../perverschijnselen/resonantie.tex}
+
+\activitychapter{../perverschijnselen/exercises/oefeningen.tex}
+\activitysection{../perverschijnselen/exercises/ht_denkvragen.tex}
+\activitysection{../perverschijnselen/exercises/ht_vraagstukken.tex}
 
 
 \end{document}
