Enkele denkvragen toegevoegd

--- a/SPC/test_local.tex
+++ b/SPC/test_local.tex
@@ -8,7 +8,7 @@
     
 \part{Harmonische trillingen}
 
-\activitychapter{../perverschijnselen/ht_intro.tex}
+% \activitychapter{../perverschijnselen/ht_intro.tex}
 % \activitychapter{../perverschijnselen/ht_trillingen.tex}
 % \activitychapter{../perverschijnselen/ht_massaveersysteem.tex}
 % \activitychapter{../perverschijnselen/ht_harmonischetrilling.tex}
@@ -18,7 +18,7 @@
 % \activitychapter{../perverschijnselen/ht_energie.tex}
 % \activitychapter{../perverschijnselen/resonantie.tex}
 
-\activitychapter{../perverschijnselen/exercises/oefeningen.tex}
+% \activitychapter{../perverschijnselen/exercises/oefeningen.tex}
 \activitysection{../perverschijnselen/exercises/ht_denkvragen.tex}
 \activitysection{../perverschijnselen/exercises/ht_vraagstukken.tex}
 
