deel oefeningen ingevoerd

--- a/SPC/test_local.tex
+++ b/SPC/test_local.tex
@@ -18,7 +18,7 @@
 % \activitychapter{../perverschijnselen/ht_energie.tex}
 % \activitychapter{../perverschijnselen/resonantie.tex}
 
-% \activitychapter{../perverschijnselen/exercises/oefeningen.tex}
+\activitychapter{../perverschijnselen/exercises/oefeningen.tex}
 \activitysection{../perverschijnselen/exercises/ht_denkvragen.tex}
 \activitysection{../perverschijnselen/exercises/ht_vraagstukken.tex}
 
