--- a/perverschijnselen/exercises/ht_denkvragen.tex
+++ b/perverschijnselen/exercises/ht_denkvragen.tex
@@ -41,6 +41,30 @@
 \end{exercise}
 
 \begin{exercise}
+	Hoe kan je de massa aan een veer in beweging brengen zodat de beginfase van de trilling gelijk is aan respectievelijk $0$ en $\frac{\pi}{2}$?
+	\begin{oplossing}
+		Een harmonische trilling met beginfase nul van een massa aan een veer kan je verkrijgen door bij de start de massa in de evenwichtspositie een initiële snelheid mee te geven. Een beginfase van $\frac{\pi}{2}$ krijg je door bijvoorbeeld de massa uit te rekken en los te laten bij de start.
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+	\begin{enumerate}
+		\item Waar kan je de fase van een harmonische trilling aflezen bij een fasor?
+		\item Toon met een berekening aan dat een faseverschil van $\frac{\pi}{2}$ tussen twee harmonische trillingen overeenkomt met een tijdsverschil van een kwart van de periode.
+	\end{enumerate}
+
+	\begin{oplossing}
+		% De fase is het argument van de sinusfunctie die een harmonische trilling beschrijft. Dat argument is te schrijven als $\omega t+\varphi$. Hierin is $\varphi$ de beginfase. De verhouding $\frac{\varphi}{2\pi}$ geeft het deel van de cyclus van de trilling van waaruit gestart wordt. Zo start bijvoorbeeld te trilling voor $\varphi=\frac{\pi}{2}$ in haar maximale uitwijking -- de trilling start vanuit een kwart van de cyclus.
+		Je kan de fase aflezen bij een fasor als de hoek die de fasor maakt met de $x$-as.
+
+		Dat een faseverschil van $\frac{\pi}{2}$ overeenkomt met een verschuiving in de tijd van een vierde van de periode, kunnen we aantonen met volgende berekening:
+		\begin{eqnarray*}
+			\omega t+\varphi = \omega\left(t+\frac{\varphi}{\omega}\right)=\omega\left(t+\frac{\varphi}{2\pi}T\right)\underset{\varphi=\frac{\pi}{2}}{=}\omega\left(t+\frac{T}{4}\right)
+		\end{eqnarray*}
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
 	Een massa $m$ oscilleert vrij aan een verticaal opgestelde veer met een periode $T$. Een onbekende massa $m'$ oscilleert aan dezelfde veer met een periode $T'$. Druk de onbekende massa $m'$ uit in functie van de gegeven grootheden.
 
 	\begin{oplossing}
@@ -50,6 +74,45 @@
 
 \begin{exercise}
 	Beoordeel de volgende uitspraak en licht ze toe: `Bij een harmonische trilling is de versnelling in absolute waarde het kleinst als de snelheid in absolute waarde het grootst is.'
+\end{exercise}
+
+\begin{exercise}
+	Zijn volgende uitspraken voor een harmonische trilling waar of vals?% Licht je antwoord toe.
+	\begin{enumerate}
+		\item Het faseverschil tussen de uitwijking en de versnelling is altijd $\pi$ (op een veelvoud van $2\pi$ na).
+		\item De uitwijking kan zowel beschreven worden door een sinus- als door een cosinusfunctie.
+		\item De uitwijking, de snelheid en de versnelling veranderen met eenzelfde frequentie.
+	\end{enumerate}
+
+	\begin{oplossing}
+		(a) Juist. De versnelling wordt gegeven door $a=\omega^2A\sin(\omega t+\varphi)\underset{\sin(\alpha+\pi)=-\sin(\alpha)}{=}\omega^2A\sin(\omega t+\varphi+\pi)$. De versnelling is dus in tegenfase met de positie.
+		\newline
+		(b) Juist. Voor complementaire hoeken geldt: $\sin(\alpha)=\cos(\alpha-\frac{\pi}{2})$.
+		\newline
+		(c) Juist. In zowel de positie, als de snelheid en de versnelling is de pulsatie $\omega$ gelijk. En op $2\pi$ na is dat de frequentie, want $omega = 2\pi f$.
+	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+	Een punt van een voorwerp voert een harmonische trilling uit. Als de amplitude en de periode verdubbelen, zal de maximale snelheid van het voorwerp:
+	\begin{multipleChoice}
+		\choice{vier keer kleiner zijn.}
+		\choice{halveren.}
+		\choice[correct]{niet veranderen.}
+		\choice{verdubbelen.}
+		\choice{vier keer groter zijn.}
+	\end{multipleChoice}
+\end{exercise}
+
+\begin{exercise}
+	Een punt van een voorwerp voert een harmonische trilling uit. Als de amplitude en de periode verdubbelen, zal de maximale versnelling van het voorwerp:
+	\begin{multipleChoice}
+		\choice{vier keer kleiner zijn.}
+		\choice[correct]{halveren.}
+		\choice{niet veranderen.}
+		\choice{verdubbelen.}
+		\choice{vier keer groter zijn.}
+	\end{multipleChoice}
 \end{exercise}
 
 \begin{exercise}
