--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -109,4 +109,8 @@
 \activitychapter{../perverschijnselen/ht_energie.tex}
 \activitychapter{../perverschijnselen/resonantie.tex}
 
+\activitychapter{../perverschijnselen/exercises/oefeningen.tex}
+\activitysection{../perverschijnselen/exercises/ht_denkvragen.tex}
+\activitysection{../perverschijnselen/exercises/ht_vraagstukken.tex}
+
 \end{document}
