--- a/perverschijnselen/exercises/ht_vraagstukken.tex
+++ b/perverschijnselen/exercises/ht_vraagstukken.tex
@@ -106,6 +106,18 @@
 \end{exercise}
 
 \begin{exercise}
+    Als men op Mercurius ($g_M=\SI{3,69}{m/s^2}$) een massa van \SI{27}{g} aan een bepaalde veer hangt, dan krijgt deze veer in de rustsituatie een uitrekking van \SI{2,0}{cm}. Vervolgens trekt men deze massa \SI{1,5}{cm} verder naar beneden en op $t = \SI{0}{s}$ wordt de massa losgelaten waarna de massa wrijvingsloos trilt.
+    \begin{enumerate}
+        \item Bepaal de veerconstante van de veer en de frequentie van de trilling.
+        \item Bepaal de bewegingsvergelijking van de trilling en veronderstel hierbij een as naar boven gericht met oorsprong in de evenwichtsstand.
+        \item Hoe groot is de maximale snelheid en maximale versnelling?
+        \item Hoe groot is de kinetische en potentiële energie na $\SI{3,0}{}$ seconden?
+        \item Zou deze massa op aarde een grotere, kleinere of gelijke frequentie hebben indien ze trilt aan dezelfde veer?
+    \end{enumerate}
+	
+\end{exercise}
+
+\begin{exercise}
     Een massa $m_0$ aan het einde van een veert oscilleert met een frequentie van $f_0=\SI{0,88}{Hz}$. Wordt $m_0$ met een extra massa van $m=\SI{800}{g}$ verzwaard, dan wordt de frequentie $f=\SI{0,48}{Hz}$. Hoe groot is $m_0$?
     \begin{oplossing}
         Omdat $\omega^2=\frac{k}{m}$ is $k=(2\pi)^2f^2m$. De veer is in beide gevallen gelijk zodat:
@@ -141,6 +153,24 @@
             \youtube{oU3pp_4n84U}
         \end{center}
     \end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+    Papa Vincent geeft zijn dochter op de schommel één duw naar links waardoor zij vanuit de evenwichtsstand vertrekt met een snelheidsgrootte van $\SI{18}{km/h}$. Exact één seconde later bereikt ze voor de eerste keer de uiterste stand helemaal links. Dochter en houten zitplank hebben een gezamenlijke massa van $\SI{15}{kg}$. Verwaarloos alle wrijving.
+    \begin{enumerate}
+        \item Bepaal de frequentie van de trilling en de slingerlengte $l$.
+        \item Bepaal de bewegingsvergelijking van de trilling, in de veronderstelling dat de uitwijking naar rechts positief is. %en veronderstel hierbij een cirkelvormige as naar rechts met oorsprong in de evenwichtsstand.
+        \item Hoe groot bedraagt de maximale hoekuitwijking en de maximale tangentiële versnelling?
+        \item Hoe groot is de spankracht in elk van de twee touwen bij doortocht door de evenwichtsstand?
+        \item Wat zou de frequentie van dezelfde schommel op de maan zijn? (De valversnelling op de maan is zes keer zo klein als die op aarde.)
+        \item Indien men de slingerlengte vier keer kleiner maakt, dan wordt de periode:
+        \begin{multipleChoice}
+            \choice{vier keer groter}
+            \choice{twee keer groter}
+            \choice[correct]{twee keer kleiner}
+            \choice{vier keer kleiner}
+        \end{multipleChoice}
+        \end{enumerate}
 \end{exercise}
 	
 \end{document}
