fout antwoord oefening 13 vraagstukken

--- a/perverschijnselen/exercises/ht_vraagstukken.tex
+++ b/perverschijnselen/exercises/ht_vraagstukken.tex
@@ -36,7 +36,7 @@
 \end{exercise}
 
 \begin{exercise}
-    Een massa van \SI{200}{g} die aan het uiteinde van een horizontale opgestelde veer met veerconstante \SI{8,4}{N/m} vastzit, krijgt een tik met een hamer waardoor ze een beginsnelheid van $1,26\rm\,m/s$ heeft. Bereken% voor de beweging de periode en de amplitude.
+    Een massa van \SI{200}{g} die aan het uiteinde van een horizontale opgestelde veer met veerconstante \SI{8,4}{N/m} vastzit, krijgt een tik met een hamer waardoor ze een beginsnelheid van \SI{1,26}{m/s} heeft. Bereken% voor de beweging de periode en de amplitude.
     \begin{enumerate}
     \item de periode en de frequentie;
     \item de amplitude;
@@ -47,15 +47,15 @@
     \end{enumerate}
 
     \begin{oplossing}
-        $T=\SI{0,9695}{s}$ 
+        $T=\SI{1,0}{s}$ 
         
-        $A=v_0\sqrt{m/k}=\SI{0,194}{m}$ 
+        $A=v_0\sqrt{m/k}=\SI{0,19}{m}$ 
 
-        $a_{max}=v_0\sqrt{k/m}=0,45\rm\,m/s^2$ 
+        $a_{max}=v_0\sqrt{k/m}=\SI{8,2}{m/s^2}$ 
         
-        $E_t=1/2mv_0^2=515,97\rm\,J$
+        $E_t=\frac{mv_0^2}{2}=\SI{0,16}{J}$
         
-        $E_k=(1-0,4^2)E_t=433,41\rm\,J$ want $E_p=\frac{1}{2}k(0,4A)^2=(0,4)^2E_t$
+        $E_k=(1-0,4^2)E_t=\SI{0,13}{J}$ want $E_p=\frac{1}{2}k(0,4A)^2=(0,4)^2E_t$
     \end{oplossing}
 \end{exercise}
 
