aetheorema nieuw, rest geüpdatet

--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -96,6 +96,18 @@
 \activitysection{../dynamica/exercises/toep_vraagstukken.tex}
 \activitysection{../dynamica/exercises/toep_ECB.tex}
 
+\part{Arbeid en Energie}
+
+\activitychapter{../arbeidenergie/intro.tex}
+% \activitychapter{../arbeidenergie/constante_kracht.tex}
+\activitychapter{../arbeidenergie/arbeid.tex}
+\activitychapter{../arbeidenergie/ae_theorema.tex}
+\activitychapter{../arbeidenergie/pot_elastische.tex}
+\activitychapter{../arbeidenergie/pot_gravitationele.tex}
+\activitychapter{../arbeidenergie/pot_gravitationele_algemeen.tex}
+\activitychapter{../arbeidenergie/pot_referentiepunt.tex}
+\activitychapter{../arbeidenergie/pot_potentiele_energie.tex}
+\activitychapter{../arbeidenergie/behoud.tex}
 
 \part{Harmonische trillingen}
 
