--- a/arbeidenergie/behoud.tex
+++ b/arbeidenergie/behoud.tex
@@ -8,34 +8,31 @@
     \xmsource\xmuitleg
 
 
+Het arbeid-energietheorema relateert de geleverde arbeid door een resulterende kracht met de toename aan kinetische energie. Het zegt dat de hoeveelheid geleverde arbeid door de resulterende kracht volledig wordt gebruikt voor de toename van kinetische energie.
 
+Anderzijds als met de resulterende kracht een potentiële energie kan worden geassocieerd, dan is de geleverde arbeid afkomstig van het verlies in potentiële energie. De energie die dus onder de vorm van potentiële energie verloren gaat wordt in kinetische energie gewonnen. En dit zodanig dat de som van beide energieën - de totale mechanische energie - constant blijft.
 
-	%%%\section{Het beginsel van behoud van energie}
+Uit $W=\Delta E_k$ en $W=-\Delta E_p$ volgt:
+\begin{equation*}
+	\Delta E_k=-\Delta E_p
+\end{equation*}
+of
+\begin{equation*}
+	E_{k,a}+E_{p,a}=E_{k,b}+E_{p,b}
+\end{equation*}
+Spelen dus enkel krachten een rol waarvoor een potentiële energie functie bestaat, dan is de som van de kinetische en de potentiële energie van een voorwerp gedurende de beweging constant.
 
-	Het arbeid-energietheorema relateert de geleverde arbeid door een resulterende kracht met de toename aan kinetische energie. Het zegt dat de hoeveelheid geleverde arbeid door de resulterende kracht volledig wordt gebruikt voor de toename van kinetische energie.
-	Anderzijds als met de resulterende kracht een potentiële energie kan worden geassocieerd, dan is de geleverde arbeid afkomstig van het verlies in potentiële energie. De energie die dus onder de vorm van potentiële energie verloren gaat wordt in kine\-ti\-sche energie gewonnen. En dit zodanig dat de som van beide energiën - de totale mechanische energie - constant blijft.
-	%%%\newline
-	%%%\newline
-	Uit $W=\Delta E_k$ en $W=-\Delta E_p$ volgt:
-	\begin{eqnarray}
-	\Delta E_k&=&-\Delta E_p\nonumber\\
-	%&\Updownarrow&\nonumber\\
-	%E_{k,b}-E_{k,a}&=&E_{p,a}-E_{p,b}\nonumber\\
-	&\Updownarrow&\nonumber\\
-	E_{k,a}+E_{p,a}&=&E_{k,b}+E_{p,b}\nonumber
-	\end{eqnarray}
-	Spelen dus enkel krachten een rol waarvoor een potentiële energie functie bestaat, dan is de som van de kinetische en de potentiële energie van een voorwerp gedurende de beweging constant.
-	
-	\kader{\textit{Het beginsel van behoud van mechanische energie}
-	\begin{eqnarray}
-	E_{k,a}+E_{p,a}&=&E_{k,b}+E_{p,b}\\
-	&\Updownarrow&\nonumber\\
-	E=\frac{mv^2}{2}+E_p~&=&~\mathrm{constant}
-	\end{eqnarray}\vspace{0cm}}
-	
-	Het principe van behoud van energie is een van de meest fundamentele principes in de fysica \ldots 
-	
-	%\clearpage
-	%%%\newpage
+\begin{definition}
+	{Het beginsel van behoud van mechanische energie.}
+	\begin{equation*}
+		E=\frac{mv^2}{2}+E_p=\mathrm{constant}
+	\end{equation*}
+\end{definition}
+
+\begin{remark}
+	Equivalente vorm: $E_{k,a}+E_{p,a}=E_{k,b}+E_{p,b}$
+\end{remark}
+
+Het principe van behoud van energie is een van de meest fundamentele principes in de fysica \ldots 
 	
 \end{document}
