--- a/SPC/test_local.tex
+++ b/SPC/test_local.tex
@@ -1,26 +1,30 @@
 \documentclass{xourse}
 
+\logo{../xmPictures/logospc.png}
+
+
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{test local}{}  
+    \xmtitle{Natuurkunde 2025-2026}{}  
  
-\setcounter{part}{1}
-    
-\part{Harmonische trillingen}
+\nonewpagetrue
 
-% \activitychapter{../perverschijnselen/ht_intro.tex}
-% \activitychapter{../perverschijnselen/ht_trillingen.tex}
-% \activitychapter{../perverschijnselen/ht_massaveersysteem.tex}
-% \activitychapter{../perverschijnselen/ht_harmonischetrilling.tex}
-% \activitychapter{../perverschijnselen/ht_verloop.tex}
-% \activitychapter{../perverschijnselen/ht_fasor.tex}
-% \activitychapter{../perverschijnselen/ht_mathematische_slinger.tex}
-% \activitychapter{../perverschijnselen/ht_energie.tex}
-% \activitychapter{../perverschijnselen/resonantie.tex}
 
-\activitychapter{../perverschijnselen/exercises/oefeningen.tex}
-\activitysection{../perverschijnselen/exercises/ht_denkvragen.tex}
-\activitysection{../perverschijnselen/exercises/ht_vraagstukken.tex}
+\setcounter{part}{-1}
+
+\part{Arbeid en Energie}
+
+\activitychapter{../arbeidenergie/intro.tex}
+% \activitychapter{../arbeidenergie/constante_kracht.tex}
+\activitychapter{../arbeidenergie/arbeid.tex}
+\activitychapter{../arbeidenergie/ae_theorema.tex}
+\activitychapter{../arbeidenergie/pot_elastische.tex}
+\activitychapter{../arbeidenergie/pot_gravitationele.tex}
+\activitychapter{../arbeidenergie/pot_gravitationele_algemeen.tex}
+\activitychapter{../arbeidenergie/pot_referentiepunt.tex}
+\activitychapter{../arbeidenergie/pot_potentiele_energie.tex}
+\activitychapter{../arbeidenergie/behoud.tex}
+
 
 
 \end{document}
