--- a/SPC/semester1_dev.tex
+++ b/SPC/semester1_dev.tex
@@ -11,86 +11,86 @@
 \activitychapter{../kinematica/inleiding.tex}
 
 
-\part{Vectoren}
+% \part{Vectoren}
 
-\activitychapter{../vectoren/vectoren_begrip.tex}
-\activitychapter{../vectoren/vectoren_notatie.tex}
-\activitychapter{../vectoren/vectoren_bewerkingen.tex}
-\activitysection{../vectoren/exercises/vectoren_oef_reeks1.tex}
-\activitysection{../vectoren/exercises/vectoren_oef_reeks2.tex}
-\activitysection{../vectoren/exercises/vectoren_oef_reeks3.tex}
+% \activitychapter{../vectoren/vectoren_begrip.tex}
+% \activitychapter{../vectoren/vectoren_notatie.tex}
+% \activitychapter{../vectoren/vectoren_bewerkingen.tex}
+% \activitysection{../vectoren/exercises/vectoren_oef_reeks1.tex}
+% \activitysection{../vectoren/exercises/vectoren_oef_reeks2.tex}
+% \activitysection{../vectoren/exercises/vectoren_oef_reeks3.tex}
 
     
-\part{Basisbegrippen van de kinematica}
+% \part{Basisbegrippen van de kinematica}
 
-\activitychapter{../kinematica/basis_intro.tex}
-\activitychapter{../kinematica/basis_referentiestelsel.tex}
-\activitychapter{../kinematica/basis_positie.tex}
-\activitychapter{../kinematica/basis_snelheid.tex}
-\activitychapter{../kinematica/basis_versnelling.tex}
-\activitychapter{../kinematica/exercises/basis_oef.tex}
+% \activitychapter{../kinematica/basis_intro.tex}
+% \activitychapter{../kinematica/basis_referentiestelsel.tex}
+% \activitychapter{../kinematica/basis_positie.tex}
+% \activitychapter{../kinematica/basis_snelheid.tex}
+% \activitychapter{../kinematica/basis_versnelling.tex}
+% \activitychapter{../kinematica/exercises/basis_oef.tex}
     
     
-\part{Eendimensionale bewegingen}
+% \part{Eendimensionale bewegingen}
 
-\activitychapter{../kinematica/1dim_intro.tex}
-\activitychapter{../kinematica/1dim_ERB.tex}
-\activitychapter{../kinematica/1dim_EVRB_calculus.tex}
-\activitychapter{../kinematica/1dim_oplossingsstrategie.tex}
-\activitychapter{../kinematica/1dim_verticale_worp.tex}
-\activitychapter{../kinematica/exercises/1dim_oef.tex}
-\activitysection{../kinematica/exercises/1dim_oef_denkvragen.tex}
-\activitysection{../kinematica/exercises/1dim_oef_vraagstukken.tex}
-\activitysection{../kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex}
+% \activitychapter{../kinematica/1dim_intro.tex}
+% \activitychapter{../kinematica/1dim_ERB.tex}
+% \activitychapter{../kinematica/1dim_EVRB_calculus.tex}
+% \activitychapter{../kinematica/1dim_oplossingsstrategie.tex}
+% \activitychapter{../kinematica/1dim_verticale_worp.tex}
+% \activitychapter{../kinematica/exercises/1dim_oef.tex}
+% \activitysection{../kinematica/exercises/1dim_oef_denkvragen.tex}
+% \activitysection{../kinematica/exercises/1dim_oef_vraagstukken.tex}
+% \activitysection{../kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex}
 
-\part{Tweedimensionale bewegingen}
+% \part{Tweedimensionale bewegingen}
 
-\activitychapter{../kinematica/2dim_intro.tex}
-\activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
-\activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex} % causes next file to fail compilation with 'Missing {}'
-\activitychapter{../kinematica/2dim_horizontale_worp.tex}
-\activitychapter{../kinematica/exercises/2dim_oef.tex}
-% \activitychapter{../kinematica/exercises/2dim_oef_sw} % Staat niet op het leerplan
-
-
-
-\part{Dynamica: De wetten van Newton}
-
-\activitychapter{../dynamica/dynamica_intro.tex}
-\activitychapter{../dynamica/newton_eerste_wet.tex}
-\activitychapter{../dynamica/newton_tweede_wet.tex}
-\activitychapter{../dynamica/newton_derde_wet.tex}
-\activitychapter{../dynamica/exercises/oefeningen.tex} 
-\activitysection{../dynamica/exercises/denkvragen.tex}
-\activitysection{../dynamica/exercises/vraagstukken.tex}
-% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
-% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
+% \activitychapter{../kinematica/2dim_intro.tex}
+% \activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
+% \activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex} % causes next file to fail compilation with 'Missing {}'
+% \activitychapter{../kinematica/2dim_horizontale_worp.tex}
+% \activitychapter{../kinematica/exercises/2dim_oef.tex}
+% % \activitychapter{../kinematica/exercises/2dim_oef_sw} % Staat niet op het leerplan
 
 
-\part{De wetten van Newton toegepast}
 
-\activitychapter{../dynamica/toep_intro.tex}
-\activitychapter{../dynamica/toep_algemeen.tex}
+% \part{Dynamica: De wetten van Newton}
 
-\activitychapter{../dynamica/toep_krachten.tex}
-\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
-\activitysection{../dynamica/toep_krachten_veerkracht.tex}
-\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
-\activitysection{../dynamica/toep_krachten_gravitatie.tex}
-\activitysection{../dynamica/toep_krachten_Coulomb.tex}
-\activitysection{../dynamica/toep_krachten_Lorentz.tex}
-\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
-\activitysection{../dynamica/toep_krachten_wrijving.tex}
-\activitysection{../dynamica/toep_krachten_trekkracht.tex}
-\activitysection{../dynamica/toep_krachten_gewicht.tex}
+% \activitychapter{../dynamica/dynamica_intro.tex}
+% \activitychapter{../dynamica/newton_eerste_wet.tex}
+% \activitychapter{../dynamica/newton_tweede_wet.tex}
+% \activitychapter{../dynamica/newton_derde_wet.tex}
+% \activitychapter{../dynamica/exercises/oefeningen.tex} 
+% \activitysection{../dynamica/exercises/denkvragen.tex}
+% \activitysection{../dynamica/exercises/vraagstukken.tex}
+% % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+% % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
-\activitychapter{../dynamica/toep_valversnelling.tex}
-\activitychapter{../dynamica/toep_dynamica_ECB.tex}
-\activitychapter{../dynamica/toep_satellietbanen.tex}
 
-\activitychapter{../dynamica/exercises/toep_oefeningen.tex}
-\activitysection{../dynamica/exercises/toep_vraagstukken.tex}
-\activitysection{../dynamica/exercises/toep_ECB.tex}
+% \part{De wetten van Newton toegepast}
+
+% \activitychapter{../dynamica/toep_intro.tex}
+% \activitychapter{../dynamica/toep_algemeen.tex}
+
+% \activitychapter{../dynamica/toep_krachten.tex}
+% \activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+% \activitysection{../dynamica/toep_krachten_veerkracht.tex}
+% \activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+% \activitysection{../dynamica/toep_krachten_gravitatie.tex}
+% \activitysection{../dynamica/toep_krachten_Coulomb.tex}
+% \activitysection{../dynamica/toep_krachten_Lorentz.tex}
+% \activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+% \activitysection{../dynamica/toep_krachten_wrijving.tex}
+% \activitysection{../dynamica/toep_krachten_trekkracht.tex}
+% \activitysection{../dynamica/toep_krachten_gewicht.tex}
+
+% \activitychapter{../dynamica/toep_valversnelling.tex}
+% \activitychapter{../dynamica/toep_dynamica_ECB.tex}
+% \activitychapter{../dynamica/toep_satellietbanen.tex}
+
+% \activitychapter{../dynamica/exercises/toep_oefeningen.tex}
+% \activitysection{../dynamica/exercises/toep_vraagstukken.tex}
+% \activitysection{../dynamica/exercises/toep_ECB.tex}
 
 
 
@@ -104,16 +104,16 @@
 
 \part{Arbeid en Energie}
 
-\activitychapter{../arbeidenergie/intro.tex}
-\activitychapter{../arbeidenergie/constante_kracht.tex}
-\activitychapter{../arbeidenergie/niet_constante_kracht.tex}
-\activitychapter{../arbeidenergie/theorema.tex}
-\activitychapter{../arbeidenergie/pot_elastische.tex}
-\activitychapter{../arbeidenergie/pot_gravitationele.tex}
-\activitychapter{../arbeidenergie/pot_gravitationele_algemeen.tex}
-\activitychapter{../arbeidenergie/pot_referentiepunt.tex}
-\activitychapter{../arbeidenergie/pot_potentiele_energie.tex}
-\activitychapter{../arbeidenergie/behoud.tex}
+% \activitychapter{../arbeidenergie/intro.tex}
+% % \activitychapter{../arbeidenergie/constante_kracht.tex}
+% \activitychapter{../arbeidenergie/arbeid.tex}
+% \activitychapter{../arbeidenergie/ae_theorema.tex}
+% \activitychapter{../arbeidenergie/pot_elastische.tex}
+% \activitychapter{../arbeidenergie/pot_gravitationele.tex}
+% \activitychapter{../arbeidenergie/pot_gravitationele_algemeen.tex}
+% \activitychapter{../arbeidenergie/pot_referentiepunt.tex}
+% \activitychapter{../arbeidenergie/pot_potentiele_energie.tex}
+% \activitychapter{../arbeidenergie/behoud.tex}
 
 
 
